new font, updates to background, added picture

--- a/app/content/projects/netflixclone.mdx
+++ b/app/content/projects/netflixclone.mdx
@@ -10,10 +10,8 @@ date: "2024-02-15"
 url: "https://netflixclone.sabalan.info/"
 ---
 
-Dit is een van mijn eerste serieuze projecten. Ik wilde heel graag zo snel mogelijk coole dingen bouwen. 
-Daarom begon ik gelijk met het leren van React. Ik ging toen een andere website na bouwen, 
-zodat ik de focus kon leggen op de ins en outs van React in plaats van de aesthetics.
+Dit was een van mijn eerste serieuze projecten waarin ik React leerde door een bekende website na te bouwen. 
+Mijn doel was om de technische kant van webdevelopment goed onder de knie te krijgen.
 
-Next.js heeft automatische image optimization. Dit is waarom ik later het project om heb gezet 
-naar een Next.js project. Dit was een verstandige keuze, aangezien er op de website veel 
-afbeeldingen geladen moeten worden.
+Door later over te stappen op Next.js kon ik profiteren van automatische image optimization, 
+wat cruciaal was voor een snelle laadtijd gezien het grote aantal afbeeldingen.
