--- a/app/content/projects/portfoliov1.mdx
+++ b/app/content/projects/portfoliov1.mdx
@@ -10,11 +10,9 @@ date: "2024-02-15"
 url: "https://sabalan.info/"
 ---
 
-Na het bouwen van de Netflix clone was ik zeer zelfverzekerd geworden. Ik heb een portfolio
-gemaakt om aan potentiële werkgevers mijn werk op een aantrekkelijke manier te kunnen laten zien.
+Dit portfolio was mijn eerste serieuze poging om mijn werk op een aantrekkelijke en 
+gestructureerde manier te presenteren. Hierin liet ik een breed scala aan projecten zien, 
+van games tot schoolopdrachten, met als doel mijn veelzijdigheid te tonen.
 
-Op de website stond van alles; van games waar ik aan gewerkt had tot aan schoolprojecten. Ik wilde
-zoveel mogelijk van mezelf laten zien, denkend dat dat de kans om aangenomen te worden zou verhogen.
-
-Uiteindelijk werd het project te ingewikkeld om bij te houden 
-door inconsistente naamgeving, slechte ordening van bestanden en en en.
+Hoewel het project uiteindelijk complex werd door inconsistentie in de opbouw, 
+was het een waardevolle les in projectorganisatie en schaalbaarheid.
